--- a/index.html
+++ b/index.html
@@ -3,11 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokemon</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  
+    
 </head>
 <body>
-    <h1>Allah</h1>
-    <H2>Muhammad</H2>
-    <h2>Makkah</h2>
+    <div class="images">
+        <div class="photos">
+            <div class="pic1">
+        <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/buttons/logo-pokemon-79x45.png" alt="">
+    </div>
+
+    <div class="pic2">
+        <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/buttons/logo-pokemoncenter-79x45.png" alt="">
+    </div>
+
+    <div class="pic3">
+        <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/buttons/corporate-en.png" alt="">
+    </div>
+
+    <div class="pic4">
+        <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/tcg-175-en.png" alt="">
+        <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/scarlet-violet-175x50-en.jpg" alt="">
+        <img src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/community-forums-175x50-en.png" alt="">
+    </div>
+    </div>
+    </div>
+
+    <div>
+        <i class="fa-solid fa-house"></i>
+        <span>HOME</span>
+        <i class="fa-solid fa-bowling-ball"></i>
+        <span>Poke dex</span>
+        <i class="fa-solid fa-plus"></i>
+        <span>Video Games & Apps</span>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 </body>
 </html>
