--- a/index.html
+++ b/index.html
@@ -36,13 +36,60 @@
     </div>
     </div>
 
-    <div>
+    <div class="nav">
+        <div class="navchild">
         <i class="fa-solid fa-house"></i>
         <span>HOME</span>
+    </div>
+        <div class="navchild">
         <i class="fa-solid fa-bowling-ball"></i>
         <span>Poke dex</span>
+    </div>
+        <div class="navchild">
         <i class="fa-solid fa-plus"></i>
         <span>Video Games & Apps</span>
+    </div>
+
+    <div class="navchild">
+        <i class="fa-regular fa-address-card"></i>
+        <span>Trading Card Games</span>
+    </div>
+         
+    <div class="navchild">
+        <i class="fa-solid fa-circle-play"></i>
+        <span>Animation</span>
+    </div>
+    <div class="navchild">
+        <i class="fa-solid fa-trophy"></i>
+        <span>Play!Pokemon Events</span>
+    </div>
+    
+    <div class="navchild">
+        <i class="fa-solid fa-newspaper"></i>
+        <span>News</span>
+    </div>
+    </div>
+
+    <h1>Video Games & Apps</h1>
+    <div class="parent">
+       <div class="aa">
+        <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-go/2024/01262024/02/pokemon-go-169.png" alt="">
+    </div> 
+       <div class="bb">
+        <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-unite/2024/01252024/pokemon-unite-169.png" alt="">
+    </div> 
+       <div class="cc">
+        <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-go/2024/01262024/01/pokemon-go-169.png" alt="">
+    </div> 
+       <div class="dd">
+        <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/strategy/go/mega-steelix/pokemon-go-169.png" alt="">
+    </div> 
+       <div class="ee">
+        <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/video-games/_tiles/pokemon-sleep/2024/01252024/pokemon-sleep-169-en.png" alt="">
+    </div> 
+       <div class="ff">
+        <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/misc/_tiles/apps/mobile-apps-34.png" alt=""></div> 
+
     </div>
 
 
